k8s-specs/svc-demo-app.yaml
kind: Service
apiVersion: v1
metadata:
    name: demo-app
    namespace: demo
    labels:
        app: demo-app
        tier: frontend
spec:
    ports:
        - name: http
          port: 80
          targetPort: 8080
          protocol: TCP
    selector:
        app: demo-app
        tier: frontend
